fix: search view result is overlapped by content

--- a/inject/vscode-frosted-glass-theme.css
+++ b/inject/vscode-frosted-glass-theme.css
@@ -289,3 +289,7 @@
   overflow: clip !important;
   overflow-clip-margin: 22px;
 }
+
+.search-view .results .monaco-list > .monaco-scrollable-element {
+  overflow: hidden !important;
+}
